[package]
name = "questdb"
description = "Connector for questdb"
repository = "https://github.com/solanav/questdb-rs"
version = "0.2.0"
authors = ["solanav <solanav@qq.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["questdb", "db", "connector"]
categories = ["database"]
documentation = "https://docs.rs/questdb"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
tokio = { version = "1", features = ["macros", "rt"] }